adicionei os links para o github de cada projeto

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         adipisicing elit. Maxime, voluptas amet.</strong>.
                     </p>
 
-                    <a href="#" class="see">
+                    <a href="https://github.com/JaniloSousa/site-parallax" target="_blank" class="see">
                         <span class="fas fa-link"></span>
                         Visualizar
                     </a>
@@ -104,7 +104,7 @@
                         adipisicing elit. Maxime, voluptas amet.</strong>.
                     </p>
 
-                    <a href="#" class="see">
+                    <a href="https://github.com/JaniloSousa/site-menu-hamburguer" target="_blank" class="see">
                         <span class="fas fa-link"></span>
                         Visualizar
                     </a>
@@ -124,7 +124,7 @@
                         adipisicing elit. Maxime, voluptas amet.</strong>.
                     </p>
 
-                    <a href="#" class="see">
+                    <a href="https://github.com/JaniloSousa/site-efeito-smooth-scroll" target="_blank" class="see">
                         <span class="fas fa-link"></span>
                         Visualizar
                     </a>
@@ -144,7 +144,7 @@
                         adipisicing elit. Maxime, voluptas amet.</strong>.
                     </p>
 
-                    <a href="#" class="see">
+                    <a href="https://github.com/JaniloSousa/calculadora-javascript" target="_blank" class="see">
                         <span class="fas fa-link"></span>
                         Visualizar
                     </a>
@@ -164,7 +164,7 @@
                         adipisicing elit. Maxime, voluptas amet.</strong>.
                     </p>
 
-                    <a href="#" class="see">
+                    <a href="https://github.com/JaniloSousa/movie-app" target="_blank" class="see">
                         <span class="fas fa-link"></span>
                         Visualizar
                     </a>
@@ -194,7 +194,7 @@
                         adipisicing elit. Maxime, voluptas amet.</strong>.
                     </p>
 
-                    <a href="#" class="see">
+                    <a href="https://github.com/JaniloSousa/CRUD-Sistema-de-Cadastro-Escolar-Alunos-e-Cursos-" target="_blank" class="see">
                         <span class="fas fa-link"></span>
                         Visualizar
                     </a>
@@ -224,7 +224,7 @@
                         adipisicing elit. Maxime, voluptas amet.</strong>.
                     </p>
 
-                    <a href="#" class="see">
+                    <a href="https://github.com/JaniloSousa/library-django" target="_blank" class="see">
                         <span class="fas fa-link"></span>
                         Visualizar
                     </a>
