--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <body onresize="mudouTamanho()" onload="carregou()">
     <header>
-        <a href="#">
+        <a href="index.html">
             <h1>JANILO</h1>
             <h2>DESENVOLVEDOR WEB FULL-STACK</h2>
         </a>
