adicionei a imagem e o link do projeto weather app em js

--- a/index.html
+++ b/index.html
@@ -172,11 +172,23 @@
                 </div>
 
                 <div class="projeto">
-                    <img src="imagens/embreve-cover.png" alt="Foto ilustrativa do projeto" class="projeto-img">
+                    <img src="imagens/weather-app.png" alt="Foto ilustrativa do projeto" class="projeto-img">
 
                     <h3>
                         App de Clima (consumindo uma API com JavaScript)
                     </h3>
+
+                    <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque ad maxime, est incidunt delectus
+                        facere quas deleniti vitae aliquid impedit <strong>cupiditate</strong> corrupti debitis cumque
+                        cum <strong>blanditiis</strong> quod natus fugit dolor? Lorem ipsum dolor sit amet consectetur
+                        adipisicing elit. Maxime, voluptas amet.</strong>.
+                    </p>
+
+                    <a href="https://github.com/JaniloSousa/weather-app-javascript" target="_blank" class="see">
+                        <span class="fas fa-link"></span>
+                        Visualizar
+                    </a>
 
 
                 </div>
