adicionei a nova foto do app de clima js

--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
                 desenvolvimento de <strong>aplicações web</strong> (web-sites) tanto no lado de
                 <strong>front-end</strong> quanto no lado de <strong>back-end</strong>. Garoto sonhador, que está sempre
                 buscando conhecimento e se aperfeiçar com novas ferramentas emergentes para estar cada vez mais
-                qualificado para o mercado de trabalho &#x1FAE1;.</p>
+                qualificado para o mercado de trabalho &#x1FAE1;.
+            </p>
             <img src="imagens/eu2.jpg" alt="Minha foto" id="janilo">
 
             <h2 id="habilidades">Habilidades:</h2>
@@ -172,7 +173,7 @@
                 </div>
 
                 <div class="projeto">
-                    <img src="imagens/weather-app.png" alt="Foto ilustrativa do projeto" class="projeto-img">
+                    <img src="imagens/app-clima-js.png" alt="Foto ilustrativa do projeto" class="projeto-img">
 
                     <h3>
                         App de Clima (consumindo uma API com JavaScript)
@@ -206,7 +207,8 @@
                         adipisicing elit. Maxime, voluptas amet.</strong>.
                     </p>
 
-                    <a href="https://github.com/JaniloSousa/CRUD-Sistema-de-Cadastro-Escolar-Alunos-e-Cursos-" target="_blank" class="see">
+                    <a href="https://github.com/JaniloSousa/CRUD-Sistema-de-Cadastro-Escolar-Alunos-e-Cursos-"
+                        target="_blank" class="see">
                         <span class="fas fa-link"></span>
                         Visualizar
                     </a>
@@ -219,12 +221,13 @@
                     <h3>
                         Site To-Do List em Django
                     </h3>
-                    
+
 
                 </div>
 
                 <div class="projeto">
-                    <img src="imagens/projeto-library-django-cover.png" alt="Foto ilustrativa do projeto" class="projeto-img">
+                    <img src="imagens/projeto-library-django-cover.png" alt="Foto ilustrativa do projeto"
+                        class="projeto-img">
 
                     <h3>
                         Site Livraria em Django
