adicionei a descrição de alguns projetos

--- a/index.html
+++ b/index.html
@@ -79,10 +79,7 @@
                         Site Com Efeito Parallax
                     </h3>
                     <p>
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque ad maxime, est incidunt delectus
-                        facere quas deleniti vitae aliquid impedit <strong>cupiditate</strong> corrupti debitis cumque
-                        cum <strong>blanditiis</strong> quod natus fugit dolor? Lorem ipsum dolor sit amet consectetur
-                        adipisicing elit. Maxime, voluptas amet.</strong>.
+                        Um efeito muito legal e bonito, que vários sites atualmente usam. O efeito parallax consistem no usuário ir descendo a página enquanto o fundo do site permanece fixo e vai sumindo conforme o scroll, além de trazer um ar elegante para seus sites é um ótimo projeto iniciante para treinar <strong>HTML</strong> e <strong>CSS</strong>, principalmente CSS no que se refere as <strong>propriedades de 'background'</strong>.
                     </p>
 
                     <a href="https://github.com/JaniloSousa/site-parallax" target="_blank" class="see">
@@ -99,10 +96,7 @@
                         Site com Menu Hamburguer
                     </h3>
                     <p>
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque ad maxime, est incidunt delectus
-                        facere quas deleniti vitae aliquid impedit <strong>cupiditate</strong> corrupti debitis cumque
-                        cum <strong>blanditiis</strong> quod natus fugit dolor? Lorem ipsum dolor sit amet consectetur
-                        adipisicing elit. Maxime, voluptas amet.</strong>.
+                        Visando melhorar a visualização dos meus sites em dispositivos móveis aprendi a criar um menu hambúrguer ultilizando a filosofia do <strong>mobile first</strong>. Esse efeito faz o menu principal do site, disposto horizontalmente, "se contrair" e um único ícone que se assemelha bastante a um hambúrguer. Ao clicar nele só então o menu reaparece agora disposto verticalmente em formato de colunas com cada opção uma abaixo da outra. Excelente projeto para ter seu primeiro contato com <strong>media queries</strong> e <strong>javascript</strong> pois usam bem pouco dessas tecnologias.
                     </p>
 
                     <a href="https://github.com/JaniloSousa/site-menu-hamburguer" target="_blank" class="see">
@@ -119,10 +113,7 @@
                         Site Com Efeito Smooth Scroll
                     </h3>
                     <p>
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque ad maxime, est incidunt delectus
-                        facere quas deleniti vitae aliquid impedit <strong>cupiditate</strong> corrupti debitis cumque
-                        cum <strong>blanditiis</strong> quod natus fugit dolor? Lorem ipsum dolor sit amet consectetur
-                        adipisicing elit. Maxime, voluptas amet.</strong>.
+                        Um efeito bem legal e elegante para seus sites, e particularmente bem <strong>simples de se fazer</strong>. Consiste em linkar as opções apresentadas no cabeçalho do seu site a certas sessões da página atualmente aberta. Ao clicar em uma das opções o usuário será "levado" para a região do site correspondente com um <strong>efeito 'suave' de scroll</strong> evitando assim a rolagem excessiva e desnecessária do scroll do mouse.
                     </p>
 
                     <a href="https://github.com/JaniloSousa/site-efeito-smooth-scroll" target="_blank" class="see">
@@ -139,10 +130,7 @@
                         Calculadora em JavaScript
                     </h3>
                     <p>
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque ad maxime, est incidunt delectus
-                        facere quas deleniti vitae aliquid impedit <strong>cupiditate</strong> corrupti debitis cumque
-                        cum <strong>blanditiis</strong> quod natus fugit dolor? Lorem ipsum dolor sit amet consectetur
-                        adipisicing elit. Maxime, voluptas amet.</strong>.
+                        Não podia faltar esse clássico projeto de iniciantes. Embora muito clichê, não deixar de ser um excelente projeto para <strong>treinarmos o DOM</strong> da linguagem javascritp. Nesse projeto aprendemos a lidar com o <strong>disparo de eventos</strong> dessa linguagem, já que ela é uma linguagem orientada a eventos, e a usar <strong>tabelas</strong> para construir a interface gráfica da calculadora. Também aprendemos a utilizar a função <strong>'eval()'</strong> para o cálculo de expressões numéricas que estão inicialmente em formato de string.
                     </p>
 
                     <a href="https://github.com/JaniloSousa/calculadora-javascript" target="_blank" class="see">
@@ -159,10 +147,7 @@
                         Catalogo de Filmes (consumindo uma API com JavaScript)
                     </h3>
                     <p>
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque ad maxime, est incidunt delectus
-                        facere quas deleniti vitae aliquid impedit <strong>cupiditate</strong> corrupti debitis cumque
-                        cum <strong>blanditiis</strong> quod natus fugit dolor? Lorem ipsum dolor sit amet consectetur
-                        adipisicing elit. Maxime, voluptas amet.</strong>.
+                        Além de saber lidar com eventos disparados via DOM da linguagem javascript, um desenvolvedor também precisar saber lidar com as várias <strong>API's</strong> que estão aí disponíveis no mercado, que contém milhares de informações interessantes só esperando para serem consumidas. Nesse projeto consumi a <strong>api da IMDB</strong> que retorna um array com vários títulos de filmes e algumas outras informações sobre eles. Excelente projeto para treinar o método <strong>'fetch()'</strong> e também para mais tarde ajudar você a desenvolver o projeto tão cobiçado do 'Clone da Netflix'.
                     </p>
 
                     <a href="https://github.com/JaniloSousa/movie-app" target="_blank" class="see">
