terminei com todas as descrições dos meus projetos

--- a/index.html
+++ b/index.html
@@ -79,7 +79,11 @@
                         Site Com Efeito Parallax
                     </h3>
                     <p>
-                        Um efeito muito legal e bonito, que vários sites atualmente usam. O efeito parallax consistem no usuário ir descendo a página enquanto o fundo do site permanece fixo e vai sumindo conforme o scroll, além de trazer um ar elegante para seus sites é um ótimo projeto iniciante para treinar <strong>HTML</strong> e <strong>CSS</strong>, principalmente CSS no que se refere as <strong>propriedades de 'background'</strong>.
+                        Um efeito muito legal e bonito, que vários sites atualmente usam. O efeito parallax consistem no
+                        usuário ir descendo a página enquanto o fundo do site permanece fixo e vai sumindo conforme o
+                        scroll, além de trazer um ar elegante para seus sites é um ótimo projeto iniciante para treinar
+                        <strong>HTML</strong> e <strong>CSS</strong>, principalmente CSS no que se refere as
+                        <strong>propriedades de 'background'</strong>.
                     </p>
 
                     <a href="https://github.com/JaniloSousa/site-parallax" target="_blank" class="see">
@@ -96,7 +100,12 @@
                         Site com Menu Hamburguer
                     </h3>
                     <p>
-                        Visando melhorar a visualização dos meus sites em dispositivos móveis aprendi a criar um menu hambúrguer ultilizando a filosofia do <strong>mobile first</strong>. Esse efeito faz o menu principal do site, disposto horizontalmente, "se contrair" e um único ícone que se assemelha bastante a um hambúrguer. Ao clicar nele só então o menu reaparece agora disposto verticalmente em formato de colunas com cada opção uma abaixo da outra. Excelente projeto para ter seu primeiro contato com <strong>media queries</strong> e <strong>javascript</strong> pois usam bem pouco dessas tecnologias.
+                        Visando melhorar a visualização dos meus sites em dispositivos móveis aprendi a criar um menu
+                        hambúrguer responsivo ultilizando a filosofia do <strong>mobile first</strong>. Esse efeito faz o menu
+                        principal do site, inicialmente disposto horizontalmente, "se contrair" e um único ícone que se assemelha
+                        bastante a um hambúrguer quando as dimensões da tela atingem um determinado tamanho. Somente clicando nesse novo ícone o menu reaparece agora disposto verticalmente
+                        em formato de colunas com cada opção uma embaixo da outra. Excelente projeto para ter seu
+                        primeiro contato com <strong>media queries</strong> e <strong>javascript</strong> pois o projeto usa dessas duas tecnologias mas de maneira bem simples.
                     </p>
 
                     <a href="https://github.com/JaniloSousa/site-menu-hamburguer" target="_blank" class="see">
@@ -113,7 +122,11 @@
                         Site Com Efeito Smooth Scroll
                     </h3>
                     <p>
-                        Um efeito bem legal e elegante para seus sites, e particularmente bem <strong>simples de se fazer</strong>. Consiste em linkar as opções apresentadas no cabeçalho do seu site a certas sessões da página atualmente aberta. Ao clicar em uma das opções o usuário será "levado" para a região do site correspondente com um <strong>efeito 'suave' de scroll</strong> evitando assim a rolagem excessiva e desnecessária do scroll do mouse.
+                        Um efeito bem legal e elegante para seus sites, e particularmente bem <strong>simples de se
+                            fazer</strong>. Consiste em linkar as opções apresentadas no cabeçalho do seu site a certas
+                        sessões da página atualmente aberta. Ao clicar em uma das opções o usuário será "levado" para a
+                        região do site correspondente com um <strong>efeito 'suave' de scroll</strong> evitando assim a
+                        rolagem excessiva e desnecessária do scroll do mouse.
                     </p>
 
                     <a href="https://github.com/JaniloSousa/site-efeito-smooth-scroll" target="_blank" class="see">
@@ -130,7 +143,12 @@
                         Calculadora em JavaScript
                     </h3>
                     <p>
-                        Não podia faltar esse clássico projeto de iniciantes. Embora muito clichê, não deixar de ser um excelente projeto para <strong>treinarmos o DOM</strong> da linguagem javascritp. Nesse projeto aprendemos a lidar com o <strong>disparo de eventos</strong> dessa linguagem, já que ela é uma linguagem orientada a eventos, e a usar <strong>tabelas</strong> para construir a interface gráfica da calculadora. Também aprendemos a utilizar a função <strong>'eval()'</strong> para o cálculo de expressões numéricas que estão inicialmente em formato de string.
+                        Não podia faltar esse clássico projeto de iniciantes. Embora muito clichê, não deixar de ser um
+                        excelente projeto para <strong>treinarmos o DOM</strong> da linguagem javascritp. Nesse projeto
+                        aprendemos a lidar com o <strong>disparo de eventos</strong> dessa linguagem, já que ela é uma
+                        linguagem orientada a eventos, e a usar <strong>tabelas</strong> para construir a interface
+                        gráfica da calculadora. Também aprendemos a utilizar a função <strong>'eval()'</strong> para o
+                        cálculo de expressões numéricas que estão inicialmente em formato de string.
                     </p>
 
                     <a href="https://github.com/JaniloSousa/calculadora-javascript" target="_blank" class="see">
@@ -147,7 +165,13 @@
                         Catalogo de Filmes (consumindo uma API com JavaScript)
                     </h3>
                     <p>
-                        Além de saber lidar com eventos disparados via DOM da linguagem javascript, um desenvolvedor também precisar saber lidar com as várias <strong>API's</strong> que estão aí disponíveis no mercado, que contém milhares de informações interessantes só esperando para serem consumidas. Nesse projeto consumi a <strong>api da IMDB</strong> que retorna um array com vários títulos de filmes e algumas outras informações sobre eles. Excelente projeto para treinar o método <strong>'fetch()'</strong> e também para mais tarde ajudar você a desenvolver o projeto tão cobiçado do 'Clone da Netflix'.
+                        Além de saber lidar com eventos disparados via DOM da linguagem javascript, um desenvolvedor
+                        também precisar saber lidar com as várias <strong>API's</strong> que estão aí disponíveis no
+                        mercado, que contém milhares de informações interessantes só esperando para serem consumidas.
+                        Nesse projeto, consumi a <strong>api da IMDB</strong> que retorna um array com vários títulos de
+                        filmes e algumas outras informações sobre eles. Excelente projeto para treinar o método
+                        <strong>'fetch()'</strong> e também para mais tarde ajudar você a desenvolver o projeto tão
+                        cobiçado do 'Clone da Netflix'.
                     </p>
 
                     <a href="https://github.com/JaniloSousa/movie-app" target="_blank" class="see">
@@ -165,10 +189,7 @@
                     </h3>
 
                     <p>
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque ad maxime, est incidunt delectus
-                        facere quas deleniti vitae aliquid impedit <strong>cupiditate</strong> corrupti debitis cumque
-                        cum <strong>blanditiis</strong> quod natus fugit dolor? Lorem ipsum dolor sit amet consectetur
-                        adipisicing elit. Maxime, voluptas amet.</strong>.
+                        Mais um projeto consumindo uma API com javascript, dessa vez agora de dados climáticos, a <strong>OpenWeather API</strong>. Mas não para por aí, também consumi nesse projeto uma api para me retornar as bandeiras dos países das cidades que o usuário buscar e também estou usando a api da <strong>Unsplash</strong> para pegar uma foto temática de cada cidade buscada e colocar no plano de fundo do site. Ao todo, um projeto que <strong>consome três API's</strong>. Excelente para treinar <strong>'fetch()'</strong>, <strong>await</strong>, <strong>promises</strong> e <strong>funções assíncronas</strong>.
                     </p>
 
                     <a href="https://github.com/JaniloSousa/weather-app-javascript" target="_blank" class="see">
@@ -183,13 +204,10 @@
                     <img src="imagens/projeto-crud-python.jpg" alt="Foto ilustrativa do projeto" class="projeto-img">
 
                     <h3>
-                        CRUD em Python
+                        CRUD em Python + MySql (Sistema Escolar Cursos e Alunos)
                     </h3>
                     <p>
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque ad maxime, est incidunt delectus
-                        facere quas deleniti vitae aliquid impedit <strong>cupiditate</strong> corrupti debitis cumque
-                        cum <strong>blanditiis</strong> quod natus fugit dolor? Lorem ipsum dolor sit amet consectetur
-                        adipisicing elit. Maxime, voluptas amet.</strong>.
+                        Programa feito em Python para rodar em Desktops. Usei a biblioteca nativa do python, <strong>Tkinter</strong>, para construir a interface gráfica. O programa visa simular um sistema escolar de cadastro de alunos e de cursos que poderão ser assistidos por esses alunos, com as quatro opções do CRUD. Utilizei a biblioteca <strong>SQL Alchemy</strong> como <strong>ORM</strong> para não ter que ficar inserindo a sintaxe do MySql dentro do código do programa. Utilizei majoritariamente o paradigma de <strong>Programação Orientada a Objetos</strong> para escrever o programa. Fiz ele visando treinar e provar meus conhecimentos em <strong>GUI</strong>, <strong>Banco de Dados</strong> e <strong>relacionamento entre tabelas</strong>.
                     </p>
 
                     <a href="https://github.com/JaniloSousa/CRUD-Sistema-de-Cadastro-Escolar-Alunos-e-Cursos-"
@@ -218,10 +236,7 @@
                         Site Livraria em Django
                     </h3>
                     <p>
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque ad maxime, est incidunt delectus
-                        facere quas deleniti vitae aliquid impedit <strong>cupiditate</strong> corrupti debitis cumque
-                        cum <strong>blanditiis</strong> quod natus fugit dolor? Lorem ipsum dolor sit amet consectetur
-                        adipisicing elit. Maxime, voluptas amet.</strong>.
+                        Site feito com o framework de desenvolvimento web Django com o contexto de uma livraria (um pouco semelhante ao <strong>Wattpad</strong>), aonde o usuário pode fazer todas as operações do <strong>CRUD</strong>, inclusive se cadastrar no sistema do site passando alguns dados como <strong>usuário</strong> e <strong>senha</strong>, fazer login, logout e atualizar seus dados. O projeto conta com tecnologias built-in do Django como o <strong>Django Paginator</strong> e o <strong>Django Messages</strong> e explorar todos os principais conceitos do framework como <strong>Urls, Views, Templates, arquivos estáticos, Models, Forms, validações de formulários e autenticação e autorização de usuários</strong>.
                     </p>
 
                     <a href="https://github.com/JaniloSousa/library-django" target="_blank" class="see">
