adicionei o projeto to-do list em django (imagem, descrição, url)

--- a/index.html
+++ b/index.html
@@ -219,11 +219,21 @@
                 </div>
 
                 <div class="projeto">
-                    <img src="imagens/embreve-cover.png" alt="Foto ilustrativa do projeto" class="projeto-img">
+                    <img src="imagens/to-do-list-django.png" alt="Foto ilustrativa do projeto" class="projeto-img">
 
                     <h3>
                         Site To-Do List em Django
                     </h3>
+
+                    <p>
+                        Projeto simples, mas que passa por todos os principais conceitos do Framework Django, como urls, views, templates e models. Ótimo projeto para quem está começando a conhecer o framework, pois utiliza várias tecnologias built-in do Django. O projeto também lhe permite <strong>criar o seu próprio usuário</strong> no sistema do site, criar suas <strong>tarefas que só você poderá ver</strong>, fazer login, logout, <strong>criar um novo usuário</strong> e muitas outras funcionalidades como <strong>concluir tarefa</strong> e <strong>filtrar tarefas</strong> já feitas ou não feitas por meio de uma caixa select em html. O projeto também conta com um <strong>dashbord</strong> para o usuário ter um <strong>resumo de suas tarefas</strong>.
+                    </p>
+
+                    <a href="https://github.com/JaniloSousa/to-do-list-django"
+                        target="_blank" class="see">
+                        <span class="fas fa-link"></span>
+                        Visualizar
+                    </a>
 
 
                 </div>
